<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lh_demo_commander</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alfchr21@student.aau.dk">a</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_simple_commander</depend>
  <depend>lh_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_amcl</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
